<resources>
    <string name="app_name">GymMaster</string>
    <string name="welcome_to_login_page">Welcome to Login Page!!</string>
    <string name="log_in">Log In</string>
    <string name="home">Home</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="add_string">Add String</string>
    <string name="fee_pending">Fee Pending</string>
    <string name="setting">Setting</string>
    <string name="add_update_fee">Add Update Fee</string>
    <string name="change_password_mobile">Change Password Mobile</string>
    <string name="log_out">Log Out</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_member">Add Member</string>
    <string name="all_members">All Members</string>
    <string name="fragment_fee_pending">Fragment Fee Pending</string>
    <string name="fragment_change_password">Fragment Change Password</string>
    <string name="gym_membership_price">Gym Membership Price</string>
    <string name="_1_month_fee">1 Month Fee :</string>
    <string name="_0_00">0.00</string>
    <string name="_3_month_fee">3 Months Fee :</string>
    <string name="_6_month_fee">6 Months Fee :</string>
    <string name="_1_year_fee">1 Year Fee :</string>
    <string name="_3_year_fee">3 Years Fee :</string>
    <string name="save">Save</string>

    <string-array name="membership">
        <item>Select</item>
        <item>1 Month</item>
        <item>3 Months</item>
        <item>6 Months</item>
        <item>1 Year</item>
        <item>3 Years</item>
    </string-array>
</resources>